# xdclip

./: .gitignore  meson.build
src/: util.c  util.h  xdcopy.c  xdpaste.c
